syntax = "proto3";

package nfs;

message Status {
	bool status = 1;
	string error = 2;
}

message String {
	string string = 1; 
}

message Path {
	string path = 1; 
}

message DoublePath {
	string source = 1;
	string sink = 2;
}

message FileUpload {
	string path = 1;
	bytes content = 2;
}

message FileDownload {
	bytes content = 2;
}

service NFS {
   rpc list_dir(Path) returns (String) {}
   rpc create_dir(Path) returns (Status) {}
   rpc delete_dir(Path) returns (Status) {}
   rpc rename_dir(DoublePath) returns (Status) {}
   rpc copy_dir(DoublePath) returns (Status) {}
   rpc move_dir(DoublePath) returns (Status) {}

   rpc get_file(Path) returns (FileDownload) {}
   rpc upload_file(FileUpload) returns (Status) {}
   
   rpc delete_file(Path) returns (Status) {}
   rpc rename_file(DoublePath) returns (Status) {}
   rpc copy_file(DoublePath) returns (Status) {}
   rpc move_file(DoublePath) returns (Status) {}
}
